--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -10,14 +11,11 @@
             type="com.es.news.model.Category" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_margin="4dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
 
         <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/isSelectedCB"
+            android:id="@+id/categoryCB"
+            android:layout_margin="4dp"
             android:checked="@{category.isSelected}"
             android:layout_width="wrap_content"
             android:text="@{category.category}"
@@ -28,5 +26,4 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
